--- a/1a_drug_side_effects_1_importing_datasets.ipynb
+++ b/1a_drug_side_effects_1_importing_datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is used to look at the different datasets that are available and choose the one that could be best used to answer the goal which is predicting the side effects.\n",
+    "This notebook looks at the different datasets that are available and choose the one that could be best used to answer the goal which is predicting the side effects.\n",
     "\n",
     "Eventhough different datasets were imported, some of the datasets did not have enough information like side effects from a drug-drug pair. Since the goal of the study was to predict side effects when 2 drugs interact, it was necessary to look for a dataset that had information about side effects of a drug-drug pair.\n",
     "\n",
@@ -202,20 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#drop unnecessary columns\n",
-    "meddra_df=meddra_df[meddra_df.concept_type=='PT']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop unnecessary columns\n",
+    "meddra_df=meddra_df[meddra_df.concept_type=='PT']\n",
+    "\n",
     "meddra_df=meddra_df.drop(['detection_method', 'concept_type', 'UMLS_id_medra', \\\n",
     "                         'medra_conceptname'], axis=1)"
    ]
@@ -339,6 +332,7 @@
    "outputs": [],
    "source": [
     "#meddra.tsv has name of the side effect\n",
+    "#Reading the meddra_all_label_se.tsv dataset - has the drug side effect.\n",
     "drug_side_effect=pd.read_table('data/meddra_all_label_se.tsv', sep='\\t', \\\n",
     "                          names=[\"source\", \"stitch_id1\", \"stitch_id2\", \"umls_id\", \"concept_type\", \"umls_idmeddra\", \\\n",
     "                                 \"side_effect\"])"
@@ -433,6 +427,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stitch_id1 and stitch_id2 are the same. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -498,6 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import the drug_names.tsv\n",
     "drug_names=pd.read_table('data/drug_names.tsv', sep='\\t', header=None, names=[\"stitch_code\", \"drug_name\"])"
    ]
   },
@@ -585,15 +587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drug_names.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "drug_names.shape\n",
+    "\n",
     "drug_names.nunique()"
    ]
   },
@@ -604,71 +599,16 @@
    "outputs": [],
    "source": [
     "# merge the drug names with meddra_df (meddra_all_indications data) on the stitch_id\n",
-    "drug_meddra=pd.merge(drug_names, meddra_df, left_on=\"stitch_code\", right_on=\"stitch_id\", how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "drug_meddra=pd.merge(drug_names, meddra_df, left_on=\"stitch_code\", right_on=\"stitch_id\", how='left')\n",
+    "\n",
     "#drop the stitch_id since it is same as stitch_code\n",
-    "drug_meddra=drug_meddra.drop(columns=['stitch_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_meddra.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_meddra.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "drug_meddra=drug_meddra.drop(columns=['stitch_id'])\n",
+    "\n",
+    "drug_meddra.head(3)\n",
+    "\n",
+    "drug_meddra.shape\n",
+    "\n",
     "drug_meddra.nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_meddra.groupby('drug_name').stitch_code.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_meddra.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_meddra"
    ]
   },
   {
@@ -878,16 +818,204 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_decagon.stitch_1.nunique()"
+    "#Load all the Pauwel's dataset\n",
+    "#http://members.cbio.mines-paristech.fr/~yyamanishi/side-effect/\n",
+    "\n",
+    "#Load Liu dataset from .mat file in NSS/capstone/data folder\n",
+    "\n",
+    "#Load Mituzani datasets\n",
+    "#http://web.kuicr.kyoto-u.ac.jp/supp/smizutan/target-effect/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (0,2,4,5,6,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "#merge bio_decagon with drug_names"
+    "#Import off_sides dataset. OFFSIDES- associations before drug approval\n",
+    "off_sides=pd.read_csv('data/OFFSIDES.csv.xz.csv', compression='xz', header=0, sep=',', quotechar='\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>drug_rxnorn_id</th>\n",
+       "      <th>drug_concept_name</th>\n",
+       "      <th>condition_meddra_id</th>\n",
+       "      <th>condition_concept_name</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>PRR</th>\n",
+       "      <th>PRR_error</th>\n",
+       "      <th>mean_reporting_frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>ergoloid mesylates, USP</td>\n",
+       "      <td>10002034</td>\n",
+       "      <td>Anaemia</td>\n",
+       "      <td>6</td>\n",
+       "      <td>126</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>2.85714</td>\n",
+       "      <td>0.45382</td>\n",
+       "      <td>0.0454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>ergoloid mesylates, USP</td>\n",
+       "      <td>10002965</td>\n",
+       "      <td>Aplasia pure red cell</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1319</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.41126</td>\n",
+       "      <td>0.00757576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>ergoloid mesylates, USP</td>\n",
+       "      <td>10013442</td>\n",
+       "      <td>Disseminated intravascular coagulation</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1314</td>\n",
+       "      <td>1.66667</td>\n",
+       "      <td>1.07626</td>\n",
+       "      <td>0.00757576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>ergoloid mesylates, USP</td>\n",
+       "      <td>10023126</td>\n",
+       "      <td>Jaundice</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>2.85714</td>\n",
+       "      <td>0.79657</td>\n",
+       "      <td>0.0151515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>ergoloid mesylates, USP</td>\n",
+       "      <td>10016288</td>\n",
+       "      <td>Febrile neutropenia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1315</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.09163</td>\n",
+       "      <td>0.00757576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  drug_rxnorn_id        drug_concept_name condition_meddra_id  \\\n",
+       "0           4024  ergoloid mesylates, USP            10002034   \n",
+       "1           4024  ergoloid mesylates, USP            10002965   \n",
+       "2           4024  ergoloid mesylates, USP            10013442   \n",
+       "3           4024  ergoloid mesylates, USP            10023126   \n",
+       "4           4024  ergoloid mesylates, USP            10016288   \n",
+       "\n",
+       "                   condition_concept_name  A    B   C     D      PRR  \\\n",
+       "0                                 Anaemia  6  126  21  1299  2.85714   \n",
+       "1                   Aplasia pure red cell  1  131   1  1319       10   \n",
+       "2  Disseminated intravascular coagulation  1  131   6  1314  1.66667   \n",
+       "3                                Jaundice  2  130   7  1313  2.85714   \n",
+       "4                     Febrile neutropenia  1  131   5  1315        2   \n",
+       "\n",
+       "  PRR_error mean_reporting_frequency  \n",
+       "0   0.45382                0.0454545  \n",
+       "1   1.41126               0.00757576  \n",
+       "2   1.07626               0.00757576  \n",
+       "3   0.79657                0.0151515  \n",
+       "4   1.09163               0.00757576  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "off_sides.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Datasets Used for Data Exploration and Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (0,2,4,6,7,8,9,10,11,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import two sides dataset. TWOSIDES - data of side effects of pairs of drugs\n",
+    "two_sides=pd.read_csv('data/TWOSIDES.csv.xz.csv', compression='xz', header=0, sep=',', quotechar='\"')"
    ]
   },
   {
@@ -6924,219 +7052,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load all the Pauwel's dataset\n",
-    "#http://members.cbio.mines-paristech.fr/~yyamanishi/side-effect/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load Liu dataset from .mat file in NSS/capstone/data folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load Mituzani datasets\n",
-    "#http://web.kuicr.kyoto-u.ac.jp/supp/smizutan/target-effect/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (0,2,4,5,6,7,8,9,10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Import off_sides dataset. OFFSIDES- associations before drug approval\n",
-    "off_sides=pd.read_csv('data/OFFSIDES.csv.xz.csv', compression='xz', header=0, sep=',', quotechar='\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>drug_rxnorn_id</th>\n",
-       "      <th>drug_concept_name</th>\n",
-       "      <th>condition_meddra_id</th>\n",
-       "      <th>condition_concept_name</th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "      <th>PRR</th>\n",
-       "      <th>PRR_error</th>\n",
-       "      <th>mean_reporting_frequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>4024</td>\n",
-       "      <td>ergoloid mesylates, USP</td>\n",
-       "      <td>10002034</td>\n",
-       "      <td>Anaemia</td>\n",
-       "      <td>6</td>\n",
-       "      <td>126</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1299</td>\n",
-       "      <td>2.85714</td>\n",
-       "      <td>0.45382</td>\n",
-       "      <td>0.0454545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>4024</td>\n",
-       "      <td>ergoloid mesylates, USP</td>\n",
-       "      <td>10002965</td>\n",
-       "      <td>Aplasia pure red cell</td>\n",
-       "      <td>1</td>\n",
-       "      <td>131</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1319</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.41126</td>\n",
-       "      <td>0.00757576</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>4024</td>\n",
-       "      <td>ergoloid mesylates, USP</td>\n",
-       "      <td>10013442</td>\n",
-       "      <td>Disseminated intravascular coagulation</td>\n",
-       "      <td>1</td>\n",
-       "      <td>131</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1314</td>\n",
-       "      <td>1.66667</td>\n",
-       "      <td>1.07626</td>\n",
-       "      <td>0.00757576</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4024</td>\n",
-       "      <td>ergoloid mesylates, USP</td>\n",
-       "      <td>10023126</td>\n",
-       "      <td>Jaundice</td>\n",
-       "      <td>2</td>\n",
-       "      <td>130</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1313</td>\n",
-       "      <td>2.85714</td>\n",
-       "      <td>0.79657</td>\n",
-       "      <td>0.0151515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4024</td>\n",
-       "      <td>ergoloid mesylates, USP</td>\n",
-       "      <td>10016288</td>\n",
-       "      <td>Febrile neutropenia</td>\n",
-       "      <td>1</td>\n",
-       "      <td>131</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1315</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.09163</td>\n",
-       "      <td>0.00757576</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  drug_rxnorn_id        drug_concept_name condition_meddra_id  \\\n",
-       "0           4024  ergoloid mesylates, USP            10002034   \n",
-       "1           4024  ergoloid mesylates, USP            10002965   \n",
-       "2           4024  ergoloid mesylates, USP            10013442   \n",
-       "3           4024  ergoloid mesylates, USP            10023126   \n",
-       "4           4024  ergoloid mesylates, USP            10016288   \n",
-       "\n",
-       "                   condition_concept_name  A    B   C     D      PRR  \\\n",
-       "0                                 Anaemia  6  126  21  1299  2.85714   \n",
-       "1                   Aplasia pure red cell  1  131   1  1319       10   \n",
-       "2  Disseminated intravascular coagulation  1  131   6  1314  1.66667   \n",
-       "3                                Jaundice  2  130   7  1313  2.85714   \n",
-       "4                     Febrile neutropenia  1  131   5  1315        2   \n",
-       "\n",
-       "  PRR_error mean_reporting_frequency  \n",
-       "0   0.45382                0.0454545  \n",
-       "1   1.41126               0.00757576  \n",
-       "2   1.07626               0.00757576  \n",
-       "3   0.79657                0.0151515  \n",
-       "4   1.09163               0.00757576  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "off_sides.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (0,2,4,6,7,8,9,10,11,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Import two sides dataset. TWOSIDES - data of side effects of pairs of drugs\n",
-    "two_sides=pd.read_csv('data/TWOSIDES.csv.xz.csv', compression='xz', header=0, sep=',', quotechar='\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -7266,15 +7181,6 @@
     "#pivot two-sides\n",
     "\n",
     "two_sides_pivot=two_sides.drop(['A', 'B', 'C', 'D', 'PRR', 'PRR_error', 'mean_reporting_frequency'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "two_sides_pivot.head(2)"
    ]
   },
   {
